--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/EnigmaLight">
         <activity
-            android:name=".StartActivity"
-            android:label="@string/app_name">
+            android:name=".ChatActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
